test/syntax/valid/03_parallel_two.sg
// Two calls on the same line separated by comma run in parallel.
import io

io.print("a"), io.print("b")
