test/syntax/errors/12_comma_at_start.sg
// expect-error: parse error
// A line cannot start with a comma.
import io

, io.print("a")
